# chip8

./: .gitignore  Cargo.toml  Makefile  README.md
emulator/: Cargo.toml
emulator/src/: lib.rs
sdl2/: Cargo.toml
sdl2/src/: audio.rs  main.rs
sdl2_window/: Cargo.toml
sdl2_window/src/: main.rs
webasm/: Cargo.toml
webasm/src/: lib.rs  web_audio.rs
webasm/www/: index.html  index.mjs
