[package]
name = "webasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.68"

[dependencies.web-sys]
version = "0.3.68"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d"
]

[dependencies.emulator]
path = "../emulator"

