[package]
name = "webasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.68"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures="0.4.41"

[dependencies.gloo-timers]
version = "0.3.0"
features = ["futures"]

[dependencies.web-sys]
version = "0.3.68"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
    "OscillatorNode",
    "OscillatorType",
    "console"
]

[dependencies.emulator]
path = "../emulator"

